# RPDemo

./: .gitignore  CMakeLists.txt  README.md
Sprites/: Boss_001.aseprite  Boss_002.aseprite  Boss_003.aseprite  Boss_004.aseprite  Enemies.aseprite  Projectiles.aseprite  StarFields.aseprite
images/: Enemies_4bpp_palette.h  Player_4bpp_palette.h  Projectiles_4bpp_palette.h  StarFields_tiles_4bpp_palette.h
music/: RESOURCE.001.vgm  RESOURCE.005.vgm
src/: constants.h  enemy.c  enemy.h  game_state.c  game_state.h  gameplay.c  gameplay_boss.c  gameplay_boss.h  gameplay_game_over.c  gameplay_playing.c  level_bonus.c  level_bonus.h  main.c  music.c  music.h  opl.c  opl.h  player_controller.c  player_controller.h  projectile.c  projectile.h  score.c  score.h  sprite_mode5.c  sprite_mode5.h  tile_mode2.c  tile_mode2.h  vgm.c  vgm.h
tools/: convert_sprite.py  export_map.lua  rp6502_mac.py
